# passpredict-app

./: .dockerignore  .gitignore  .gitlab-ci.yml  .gitmodules  Dockerfile  Makefile  Pipfile  README.md  alembic.ini  asv.conf.json  cron.dockerfile  crontab  deploy-static.sh  docker-compose.yml  docker-entrypoint.sh  gulpfile.js  justfile  main.py  manage.py  package-lock.json  package.json  pyproject.toml  pytest.ini  requirements-dev.in  requirements-dev.txt  requirements.in  requirements.txt  rollup.config.js  server.js  setup-cron.py  setup.py  webpack.config.js  worker.dockerfile
admin/: admin.dockerfile  app.py  main.py  models.py  requirements.txt  resources.py  settings.py
alembic/: env.py
app/: _overpass.pyx  _rotations.pyx  _solar.pyx  api.py  astrodynamics.py  cache.py  crotations.c  crotations.h  csolar.c  database.py  dbmodels.py  geocode.py  locations.py  main.py  models.py  overpass.py  passes.py  passpredict.h  predictions.py  propagate.py  resources.py  schemas.py  settings.py  solar.py  templating.py  timefn.py  tle.py  topocentric.py  utils.py  workers.py
astro_pkg/: .gitignore  mkdocs.yml  pyproject.toml  requirements.txt  run.py  setup.py
backend-api/: .dockerignore  Dockerfile  README.md  alembic.ini  config.toml  main.py  migrate.Dockerfile  pyproject.toml  worker.Dockerfile
backend-api/alembic/: env.py
backend-api/alembic/versions/: 000aa99d1564_initial_schema.py  12b8c4e0c00d_initial_schema.py  2645b2d61634_update_orbit_indexes.py  347036cd8450_index_on_lowercase_strings.py  9e56b08db8b0_populate_satellite_fts_table.py  bdee373b9b9f_update_satellite_indexes.py  bfb36525c5cc_satellite_fts_table.py
backend-api/api/: home.py  logging.py  main.py  settings.py  utils.py
backend-api/api/astrodynamics/: __init__.py  geometry.py  location.py  predict.py  propagator.py
backend-api/api/db/: __init__.py  _base.py  _fts.py  _models.py  engine.py  filter.py  fts.py  session.py
backend-api/api/domain/: __init__.py
backend-api/api/passes/: domain.py  routes.py  schemas.py  service.py  services.py
backend-api/api/satellites/: __init__.py  domain.py  routes.py  schemas.py  service.py  services.py
backend-api/api/static/: home.md
backend-api/api/templates/: base.html  home.html
backend-api/api/workflows/: __init__.py  __main__.py  client.py  worker.py
backend-api/api/workflows/workflows/: __init__.py  celestrak.py  insert_orbits.py  spacetrack.py  spacetrack_example.json  update_orbits.py
benchmarks/: benchmark_predictions.py  benchmark_propagate.py  benchmark_rotations.py  benchmark_solar.py  benchmark_timefn.py
frontend/: package-lock.json
infra/: .gitignore  README  example-users.txt  get-hatch-token.sh  stack.prod.yaml  swarm.prod.yaml  user-add.sh
legacy_app/: dbmodels.py  main.py  passes.py  visible.txt  workers.py
tests/: conftest.py  test_api.py  (+12 more)
(+154 files in other folders)
