[metadata]
name = "app"
version = "0.1.0"
description = "Website for passpredict.com"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"


[tool.pytest.ini_options]
testpaths = [
    "tests"
]
filterwarnings = [
    "ignore: 'contextfunction' is renamed to 'pass_context':DeprecationWarning",
]
