[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "passpredict-api"
version = "2.0.0"
description = "Backend API for passpredict.com"
requires-python = ">=3.12"
readme = "README.md"
dependencies = [
    "fastapi",
    "pydantic>=2",
    "pydantic-settings",
    "numpy",
    "hatchet-sdk>=0.47.0",
    "httpx",
    "sqlalchemy>=2",
    "aiosqlite",
    "uvicorn",
    "uvloop",
    "httptools",
    "passpredict>=0.5.1",
    "markdown>=3.7",
    "jinja2>=3.1.6",
]

[project.scripts]
hatchet = "api.workflows:start"

[project.optional-dependencies]
dev = [
    "pytest>=8.3.5",
]

[dependency-groups]
alembic = [
    "alembic",
    "sqlalchemy>=2",
    "aiosqlite",
    "pydantic>=2",
    "pydantic-settings",
]


[tool.setuptools]
packages = ["api"]

[tool.bumpversion]
current_version = "2.0.0"
parse = "(?P<major>\\d+)\\.(?P<minor>\\d+)\\.(?P<patch>\\d+)"
serialize = ["{major}.{minor}.{patch}"]
search = "{current_version}"
replace = "{new_version}"
regex = false
ignore_missing_version = false
ignore_missing_files = false
tag = false
sign_tags = false
tag_name = "v{new_version}"
tag_message = "Bump version: {current_version} → {new_version}"
allow_dirty = false
commit = false
message = "Bump version: {current_version} → {new_version}"
moveable_tags = []
commit_args = ""
setup_hooks = []
pre_commit_hooks = []
post_commit_hooks = []
